--- a/CoLiW/CoLiW.csproj
+++ b/CoLiW/CoLiW.csproj
@@ -37,6 +37,9 @@
     <Reference Include="Facebook">
       <HintPath>..\packages\Facebook.6.0.20\lib\net40-client\Facebook.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -57,6 +60,8 @@
     <Compile Include="FacebookLoginForm.Designer.cs">
       <DependentUpon>FacebookLoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FacebookTests.cs" />
+    <Compile Include="InvalidCommand.cs" />
     <Compile Include="PhotoDetails.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
