--- a/CoLiW/packages.config
+++ b/CoLiW/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Facebook" version="6.0.20" />
+  <package id="NUnit" version="2.6.0.12054" />
 </packages>
