Added features: Post message to user Get list of albums
Next features:
Post photo to user
Create album
Download profile picture

--- a/CoLiW/CoLiW.csproj
+++ b/CoLiW/CoLiW.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -63,6 +64,7 @@
     <Compile Include="FacebookTests.cs" />
     <Compile Include="InvalidCommand.cs" />
     <Compile Include="PhotoDetails.cs" />
+    <Compile Include="PostDetails.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserDetails.cs" />
