--- a/CoLiW/CoLiW.csproj
+++ b/CoLiW/CoLiW.csproj
@@ -38,6 +38,12 @@
     <Reference Include="Facebook">
       <HintPath>..\packages\Facebook.6.0.20\lib\net40-client\Facebook.dll</HintPath>
     </Reference>
+    <Reference Include="Hammock.ClientProfile">
+      <HintPath>..\packages\TweetSharp.2.1.5\lib\4.0\Hammock.ClientProfile.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\TweetSharp.2.1.5\lib\4.0\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -50,6 +56,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TweetSharp">
+      <HintPath>..\packages\TweetSharp.2.1.5\lib\4.0\TweetSharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlbumDetails.cs" />
@@ -67,6 +76,13 @@
     <Compile Include="PostDetails.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Twitter.cs" />
+    <Compile Include="TwitterLoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TwitterLoginForm.Designer.cs">
+      <DependentUpon>TwitterLoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserDetails.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -75,6 +91,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Facebook\FacebookLoginForm.resx">
       <DependentUpon>FacebookLoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TwitterLoginForm.resx">
+      <DependentUpon>TwitterLoginForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
