--- a/CoLiW/packages.config
+++ b/CoLiW/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Facebook" version="6.0.20" />
+  <package id="Hammock" version="1.3.0" />
+  <package id="Newtonsoft.Json" version="4.5.7" />
   <package id="NUnit" version="2.6.0.12054" />
+  <package id="TweetSharp" version="2.1.5" />
 </packages>
